--- a/css/comparador.css
+++ b/css/comparador.css
@@ -65,6 +65,7 @@ body {
     transition: 0.3s ease;
     -webkit-text-stroke: 0.2em black;
     paint-order: stroke fill;
+    text-decoration: none;
 }
 .login-btn:hover {
     transform: scale(1.05);
