--- a/css/comparador.css
+++ b/css/comparador.css
@@ -9,10 +9,12 @@ body {
 
 /* ===== HEADER ===== */
 .header {
+    position: sticky;
     margin: auto;
     padding: calc(40 / 1080 * 100vh) calc(48 / 1920 * 100vw);
     background-color: var(--cinza-padrao);
     box-shadow: 0 calc(4 / 1080 * 100vh) calc(4 / 1080 * 100vh) rgba(0, 0, 0, 0.25);
+    z-index: 40;
 }
 
 .nav {
@@ -76,9 +78,11 @@ body {
 
 /*  BACKGROUND  */
 .background-container {
-    position: absolute;
+    position: fixed;
+    top: 0;
+    left: 0;
     width: 100%;
-    height: 186vh;
+    height: 100%;
     background-color: #000;
     overflow: hidden;
     display: flex;
@@ -98,7 +102,7 @@ body {
 .stripe-yellow {
     height: calc(400 / 1080 * 100vh);
     background: var(--amarelo-dourado);
-    top: calc(-180 / 1920 * 100vw);
+    top: calc(-160 / 1920 * 100vw);
 }
 
 .stripe-blue {
@@ -110,7 +114,7 @@ body {
 .stripe-red {
     height: calc(400 / 1080 * 100vh);
     background: var(--vermelho-boston);
-    bottom: calc(110 / 1920 * 100vw);
+    bottom: calc(-760 / 1920 * 100vw);
 }
 
 /* Page Title */
@@ -322,11 +326,80 @@ body {
 .footer {
     display: flex;
     position: relative;
+    z-index: 0;
     width: 100%;
     min-height: calc(300 / 1080 * 100vh);
     background: rgba(0, 0, 0, 0.9);
     flex-wrap: wrap;
     padding: calc(40 / 1080 * 100vh) calc(80 / 1920 * 100vw);
+    margin-top: auto;
+}
+
+.footer-left, .footer-right {
+    display: flex;
+    flex-direction: column;
+    gap: clamp(10px, 2vh, 20px);
+}
+
+.footer-logo {
+    width: clamp(40px, calc(80 / 1920 * 100vw), 80px);
+    height: clamp(40px, calc(80 / 1080 * 100vh), 80px);
+    border-radius: 50%;
+    opacity: 0.7;
+    box-shadow: 0 4px 4px rgba(0,0,0,0.25);
+}
+
+.footer-brand {
+    font-family: 'Righteous', sans-serif;
+    font-size: clamp(20px, 2.5vw, 54px);
+    color: white;
+    opacity: 0.7;
+}
+
+.footer-links h4 {
+    font-family: "Fredoka", sans-serif;
+    font-weight: 600;
+    font-size: clamp(14px, 1.5vw, 24px);
+    color: white;
+    opacity: 0.7;
+    text-decoration: underline;
+    margin: calc(10 / 1920 * 100vw);
+}
+
+.footer-links ul {
+    list-style: disc;
+    padding-left: 1.5rem;
+    font-family: 'Fredoka', sans-serif;
+    font-weight: 400;
+    font-size: clamp(14px, 1.5vw, 24px);
+    color: white;
+    opacity: 0.7;
+}
+
+.footer-divider {
+    width: 1px;
+    height: calc(320 / 1080 * 100vh);
+    background: rgba(255, 255, 255, 0.7);
+    margin: 0 calc(60 / 1920 * 100vw);
+}
+
+.footer-right h3 {
+    font-family: 'Righteous', sans-serif;
+    font-size: clamp(24px, 2.5vw, 54px);
+    color: white;
+    opacity: 0.7;
+    margin: 0px;
+}
+
+.footer-description,
+.footer-copyright {
+    display: flex;
+    font-family: 'Fredoka', sans-serif;
+    font-weight: 400;
+    font-size: clamp(14px, 1vw, 20px);
+    color: rgba(255, 255, 255, 0.7);
+    line-height: 1.4;
+    max-width: 500px;
 }
 
 /* === USER MENU  === */
