--- a/css/pagina-inicial.css
+++ b/css/pagina-inicial.css
@@ -89,7 +89,7 @@ body {
 .background-container {
     position: absolute;
     width: 100%;
-    height: 141vh;
+    height: 100%;
     background-color: #000;
     overflow: hidden;
     display: flex;
@@ -100,7 +100,7 @@ body {
 }
 
 .stripe {
-    position: absolute;
+    position: fixed;
     width: calc(2200 / 1920 * 100vw);
     transform: rotate(-20deg);
     border: calc(10 / 1920 * 100vw) solid #fff;
@@ -120,7 +120,7 @@ body {
 
 .red-stripe {
     background-color: var(--vermelho-boston);
-    bottom: calc(250 / 1080 * 110vh);
+    bottom: calc(-155 / 1080 * 110vh);
     height: calc(300 / 1080 * 100vh);
 }
 /* === === === */
@@ -264,6 +264,7 @@ body {
     font-size: clamp(24px, 2.5vw, 54px);
     color: white;
     opacity: 0.7;
+    margin: 0px;
 }
 
 .footer-description,
